# MLOps2023

./: .gitignore  .pre-commit-config.yaml  ML_feature_selection.ipynb  README.md  config.py  infer.py  pyproject.toml  train.py  Без названия.ipynb
.dvc/: config
.ipynb_checkpoints/: ML_feature_selection-checkpoint.ipynb  Trash-checkpoint.ipynb
Data/: mnist_target_test.csv  mnist_target_train.csv  mnist_test.csv  mnist_train.csv  test.dvc  train.dvc
Data/miRNA_dataset/: GPL8179_humanMI_V2_R0_XS0000124-MAP.txt  GSE36946_non-normalized (1).txt
conf/: config.yaml
conf/data/: mnist.yaml  test.yaml  train.yaml
mlops2023/: classifiers.py
