[tool.poetry]
name = "mlops2023"
version = "0.1.0"
description = ""
authors = ["german <mr.g.o@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
sklearn = "^0.0.post9"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
